Add separate columns for ship placement and legend/shooting

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,10 @@
 .container {
+    display: flex;
+    flex-direction: row; 
+}
+.grid {
     height: 500px;
-    margin: 100px auto;
+    margin: 50px auto;
     width: 500px;
   }
   
