--- a/style/style.css
+++ b/style/style.css
@@ -43,9 +43,9 @@
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
-    width: 120px;
-    height: 120px;
+    border-top: 16px solid grey;
+    width: 250px;
+    height: 250px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
 }
@@ -99,8 +99,10 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    background: url("../images/gameBackground.jpg") no-repeat center fixed;
+    background-size: cover;
+    /*background-color: rgb(0,0,0);*/
+    /*background-color: rgba(0,0,0,0.4);*/
 }
 
 .popup-content {
@@ -109,4 +111,10 @@
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+}
+
+#loaderh2 {
+    font-size: 50px;
+    line-height: 48px;
+    color: black;
 }
