--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
+body {
+    background: url("../images/gameBackground.jpg") no-repeat center fixed;
+}
 .container {
     display: flex;
     flex-direction: row;
@@ -8,6 +11,7 @@
     height: auto;
     margin: 20px 30px;
     width: 500px;
+    background-color: white;
   }
 
 .row {
@@ -22,7 +26,7 @@
 }
 .ocean {
     background: #2980b9;
-    margin: 0.5px;
+    border: 0.2px white solid;
     color: white;
     font-weight: bold;
     font-size: 1.5em;
@@ -99,10 +103,10 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background: url("../images/gameBackground.jpg") no-repeat center fixed;
+    
     background-size: cover;
-    /*background-color: rgb(0,0,0);*/
-    /*background-color: rgba(0,0,0,0.4);*/
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
 .popup-content {
@@ -117,4 +121,5 @@
     font-size: 50px;
     line-height: 48px;
     color: black;
+    opacity: 0.5;
 }
