--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 body {
     background: url("../images/gameBackground.jpg") no-repeat center fixed;
+    background-size: cover;
 }
 .container {
     display: flex;
