--- a/style/style.css
+++ b/style/style.css
@@ -7,9 +7,10 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+
 }
 .grid {
-    height: auto;
+    height: 500px;
     margin: 20px 30px;
     width: 500px;
     background-color: white;
@@ -121,6 +122,14 @@ body {
 #loaderh2 {
     font-size: 50px;
     line-height: 48px;
-    color: black;
+    color: white;
     opacity: 0.5;
+}
+
+@media only screen and (max-width: 768px) {
+    .grid {
+        margin: 5px 10px;
+        width: 100%;
+        height: 45%;
+    }
 }
