--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ body {
     height: 500px;
     margin: 20px 30px;
     width: 500px;
-    background-color: white;
+    /*background-color: white;*/
   }
 
 .row {
